--- a/client/views/feed.html
+++ b/client/views/feed.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="feed-container">
+    <h2>Welcome User,</h2>
     <h2>Live Feed</h2>
     <form id="postForm">
       <input type="text" id="postTitle" placeholder="Title" required />
