--- a/client/views/signup.html
+++ b/client/views/signup.html
@@ -28,7 +28,7 @@
           <br>
           <button type="submit">Sign Up</button>
         </form>
-        <p>Already have an account? <a href="login.html">Login here</a></p>
+        <p>Already have an account? <a href="/login">Login here</a></p>
       </section>
     </main>
     
